<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/city_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        >
    </Spinner>

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/weather"/>

    <Button
        android:id="@+id/searchView_button"
        android:text="@string/searchView"
        android:textColor="@color/colorTerracotta"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coord"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:onClick="searchViewClick"
        />

    <Button
        android:id="@+id/forecast_button"
        android:text="@string/forecast"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchView_button"
        android:layout_marginLeft="20dp"
        />

    <Button
        android:id="@+id/getCities_button"
        android:text="@string/getCities"
        android:textAllCaps="false"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forecast_button"
        android:textSize="20sp"
        android:backgroundTint="@color/colorTerracotta"
        android:layout_marginLeft="20dp"
        />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/setAlarm"
        android:textAllCaps="false"
        android:layout_below="@+id/getCities_button"
        android:onClick="setAlarm"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        />

</RelativeLayout>