<merge
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/picture_view"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/city_spinner"
        />
    <TextView
        android:id="@+id/city_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/picture_view"
        android:layout_alignTop="@+id/picture_view"
        android:textSize="24sp"
        android:textColor="@color/colorTerracotta"
        />
    <TextView
        android:id="@+id/description_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_toRightOf="@id/city_name_view"
        android:layout_alignTop="@id/city_name_view"
        android:layout_marginLeft="20dp"
        android:textSize="24sp"
        />
    <TextView
        android:id="@+id/temp"
        android:text="@string/temperature"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/city_name_view"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/temperature_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/temp"
        android:layout_alignTop="@id/temp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/wind"
        android:text="@string/wind"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/wind_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/wind"
        android:layout_alignTop="@id/wind"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/clouds"
        android:text="@string/clouds"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/wind"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/clouds_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/clouds"
        android:layout_alignTop="@id/clouds"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/pressure"
        android:text="@string/pressure"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/clouds"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/pressure_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/pressure"
        android:layout_alignTop="@id/pressure"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/coord"
        android:text="@string/coords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pressure"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/coord_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/coord"
        android:layout_alignTop="@id/coord"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        android:textColor="@color/colorTerracotta"
        />

</merge>